[tool.poetry]
name = "vz"
version = "0.1.0"
description = "Random scripts for our household"
authors = ["L3viathan <git@l3vi.de>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"

[tool.poetry.scripts]
vz-lights = "vz.lights:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
